--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp"
     android:layout_margin="8dp"
-    android:elevation="3dp">
+    android:elevation="3dp"
+    app:cardCornerRadius="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,11 +15,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
             android:text="Prayer Heading"
             android:textSize="30sp"
-            android:textStyle="bold"
-            android:paddingLeft="8dp"
-            android:paddingTop="8dp"/>
+            android:textStyle="bold" />
 
         <View
             android:id="@+id/divider"
@@ -40,21 +40,22 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Preview"
-                android:textColor="#0000EE"
-                android:layout_margin="4dp"
-                android:paddingRight="4dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$0.99"
-                android:textColor="#0000EE"
+                android:layout_margin="4dp"
+                android:paddingRight="4dp"
+                android:text="Preview"
+                android:textColor="#0000EE" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
                 android:drawableRight="@drawable/ic_file_download_black_24dp"
-                android:layout_margin="4dp"/>
+                android:text="$0.99"
+                android:textColor="#0000EE" />
 
         </LinearLayout>
 
