--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -13,6 +13,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/prayer_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
@@ -28,6 +29,7 @@
             android:background="?android:attr/listDivider" />
 
         <TextView
+            android:id="@+id/scripture_reference"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
@@ -42,18 +44,24 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/preview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:paddingRight="4dp"
                 android:text="Preview"
                 android:textColor="#0000EE" />
 
             <TextView
+                android:id="@+id/purchase"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
+                android:clickable="true"
                 android:drawableRight="@drawable/ic_file_download_black_24dp"
+                android:focusable="true"
                 android:text="$0.99"
                 android:textColor="#0000EE" />
 
