--- a/app/src/main/res/layout/activity_prayer_heading.xml
+++ b/app/src/main/res/layout/activity_prayer_heading.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activities.PrayerHeadingActivity">
 
+    <FrameLayout
+        android:id="@+id/prayer_acivity_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
