--- a/app/src/main/res/layout/fragment_heading_content.xml
+++ b/app/src/main/res/layout/fragment_heading_content.xml
@@ -32,6 +32,7 @@
                 android:background="?android:attr/listDivider" />
 
             <TextView
+                android:id="@+id/scriptures"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="scriptures"
