--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
         android:src="@drawable/ic_overcomers_prayers" />
 
     <androidx.core.widget.NestedScrollView
+        android:layout_marginTop="16dp"
         android:id="@+id/login_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
