--- a/app/src/main/res/layout/fragment_main_content.xml
+++ b/app/src/main/res/layout/fragment_main_content.xml
@@ -16,19 +16,22 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/white"
-                android:text="@string/app_name"
                 android:id="@+id/toolbar_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:ellipsize="marquee"
+                android:fontFamily="@font/montserrat"
                 android:marqueeRepeatLimit="marquee_forever"
-                android:scrollHorizontally="true" />
+                android:scrollHorizontally="true"
+                android:text="@string/app_name"
+                android:textColor="@color/white"
+                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+                android:textStyle="bold" />
 
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
 
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
@@ -46,5 +49,6 @@
             android:layout_height="match_parent" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
