--- a/app/src/main/res/layout/fragment_main_content.xml
+++ b/app/src/main/res/layout/fragment_main_content.xml
@@ -39,7 +39,7 @@
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
+        android:paddingTop="56dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_marginTop="16dp"
