--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -15,7 +15,7 @@
         <bitmap
             android:layout_gravity="center"
             android:gravity="center"
-            android:src="@drawable/ic_overcomers_prayers"
+            android:src="@drawable/opbg"
             android:tileMode="disabled" />
     </item>
 
