--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,9 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/app_bar_search"
-        android:orderInCategory="20"
+        android:orderInCategory="10"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/search"
+        app:showAsAction="ifRoom"
         app:actionViewClass="android.widget.SearchView" />
+
+    <item
+        android:id="@+id/sign_button"
+        android:title="@string/action_sign_in"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="20"
+        android:background="?attr/selectableItemBackground"
+        android:fontFamily="@font/montserrat"
+        android:onClick="signIn"/>
+
+    <item
+        android:id="@+id/app_info"
+        android:title="@string/info"
+        app:showAsAction="never"
+        android:orderInCategory="30"
+        android:background="?attr/selectableItemBackground"
+        android:fontFamily="@font/montserrat"/>
 
 </menu>
