--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -37,13 +37,15 @@
             android:fontFamily="@font/montserrat"
             android:paddingLeft="8dp"
             android:paddingBottom="8dp"
-            android:text="Scripture references"
+            android:text="@string/scripture_references"
             android:textSize="14sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_gravity="start"
+            android:layout_marginStart="4dp"
+            android:paddingStart="8dp"
             android:orientation="horizontal">
 
             <TextView
@@ -54,7 +56,7 @@
                 android:clickable="true"
                 android:focusable="true"
                 android:paddingRight="4dp"
-                android:text="Preview"
+                android:text="@string/preview"
                 android:textColor="#0000EE" />
 
             <TextView
