finish implementing search functionality

--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -12,6 +12,7 @@
             android:id="@+id/toolbar_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:singleLine="true"
             android:ellipsize="marquee"
             android:fontFamily="@font/montserrat"
             android:marqueeRepeatLimit="marquee_forever"
