--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -20,7 +20,7 @@
             android:fontFamily="@font/montserrat_bold"
             android:paddingLeft="8dp"
             android:paddingTop="8dp"
-            android:text="Prayer Heading"
+            android:text="@string/prayer_heading"
             android:textSize="24sp"
             />
 
@@ -69,6 +69,14 @@
                 android:focusable="true"
                 android:text="$0.99"
                 android:textColor="#0000EE" />
+
+            <ImageView
+                android:id="@+id/prayer_favourited"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:visibility="gone"
+                app:srcCompat="@android:drawable/btn_star_big_on" />
 
         </LinearLayout>
 
