--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -21,8 +21,7 @@
             android:paddingLeft="8dp"
             android:paddingTop="8dp"
             android:text="Prayer Heading"
-            android:textSize="24sp"
-            />
+            android:textSize="24sp" />
 
         <View
             android:id="@+id/divider"
@@ -40,13 +39,25 @@
             android:text="@string/scripture_references"
             android:textSize="14sp" />
 
+        <TextView
+            android:id="@+id/purchased"
+            android:visibility="gone"
+            android:drawablePadding="8dp"
+            android:drawableEnd="@drawable/ic_check_black_24dp"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/montserrat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/purchased"
+            android:textColor="@color/accent" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
             android:layout_marginStart="4dp"
-            android:paddingStart="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:paddingStart="8dp">
 
             <TextView
                 android:id="@+id/preview"
