--- a/app/src/main/res/layout/fragment_heading_content.xml
+++ b/app/src/main/res/layout/fragment_heading_content.xml
@@ -79,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="8dp"
+        android:elevation="4dp"
         android:text="View More ($0.99)" />
 
 </LinearLayout>
