--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,6 +6,7 @@
         android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="10"
         android:title="@string/search"
+        android:iconTint="@color/white"
         app:actionViewClass="android.widget.SearchView"
         app:showAsAction="ifRoom" />
 
