--- a/app/src/main/res/layout/prayer_points.xml
+++ b/app/src/main/res/layout/prayer_points.xml
@@ -1,44 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/serial_number"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_margin="4dp"
+        android:background="@drawable/number_circle"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center_vertical"
+        android:text="1"
+        android:textAlignment="center"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_marginTop="6dp"
+        android:id="@+id/ppoint"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat"
+        android:padding="8dp"
+        android:text="First Point"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/speaker"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/serial_number"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical"
-            android:layout_margin="4dp"
-            android:background="@drawable/number_circle"
-            android:fontFamily="@font/montserrat"
-            android:gravity="center_vertical"
-            android:text="1"
-            android:textAlignment="center"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/ppoint"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/montserrat"
-            android:padding="8dp"
-            android:text="First Point"
-            android:textSize="18sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@android:color/darker_gray" />
+        app:srcCompat="@drawable/ic_megaphone" />
 
 </LinearLayout>
