icon added, prayer text made black

--- a/app/src/main/res/layout/prayer_points.xml
+++ b/app/src/main/res/layout/prayer_points.xml
@@ -28,6 +28,7 @@
         android:fontFamily="@font/montserrat"
         android:padding="8dp"
         android:text="First Point"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold" />
 
