--- a/app/src/main/res/layout/prayer_item.xml
+++ b/app/src/main/res/layout/prayer_item.xml
@@ -8,6 +8,13 @@
     android:elevation="3dp"
     app:cardCornerRadius="4dp">
 
+    <Button
+        android:id="@+id/addToNew"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ADD"
+        android:layout_gravity="bottom|end"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
