--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/category_card"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_margin="8dp"
-    android:elevation="3dp"
-    app:cardCornerRadius="4dp">
+    android:layout_margin="4dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="8dp">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="10dp"
         android:background="@color/colorAccent" />
 
@@ -20,21 +21,34 @@
         android:id="@+id/category_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Category"
-        android:textSize="18sp"
-        android:layout_margin="10dp"
         android:layout_gravity="center"
-        android:padding="10dp"
+        android:layout_margin="10dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
         android:textColor="@color/black"
-        android:gravity="center"/>
+        android:textSize="18sp"
+        tools:text="Category" />
+
+    <ImageView
+        android:id="@+id/arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|end"
+        android:layout_marginEnd="16dp"
+        app:srcCompat="@drawable/ic_arrow_down" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_marginBottom="16dp"
+        android:layout_gravity="bottom"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:layout_gravity="bottom"
+        android:layout_marginBottom="16dp"
         android:background="@color/colorAccent" />
 
     <View
@@ -49,8 +63,8 @@
         android:layout_width="2dp"
         android:layout_height="match_parent"
         android:layout_gravity="end"
-        android:layout_marginEnd="10dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="16dp"
         android:background="@color/colorAccent" />
 
